--- a/articles/sentinel/index.yml
+++ b/articles/sentinel/index.yml
@@ -136,7 +136,7 @@ landingContent:
           - text: Threat hunting
             url: hunting.md
           - text: Kusto Query Language in Microsoft Sentinel
-            url: kusto-overview.md
+            url: /kusto/query/kusto-sentinel-overview?toc=/azure/sentinel/TOC.json&bc=/azure/sentinel/breadcrumb/toc.json
           - text: Automation rules
             url: automate-incident-handling-with-automation-rules.md
           - text: Playbooks
