--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -27,6 +27,9 @@
   - name: Create a vault - ARM template
     displayName: Resource Manager
     href: quickstart-create-vault-template.md
+  - name: Create a vault - Terraform
+    displayName: ARM, Resource Manager
+    href: quickstart-create-vault-terraform.md
 - name: Tutorials
   items:
   - name: Azure VM disaster recovery to Azure
