--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -156,6 +156,8 @@
       href: virtual-network-manage-peering.md
     - name: Update VNet peering address spaces
       href: update-virtual-network-peering-address-space.yml
+    - name: Configure Subnet Peering
+      href: how-to-configure-subnet-peering.md
     - name: Connectivity scenarios
       items:
       - name: Virtual network to Virtual network
