--- a/articles/operator-call-protection/index.yml
+++ b/articles/operator-call-protection/index.yml
@@ -11,6 +11,7 @@ metadata:
   author:  GemmaWakeford
   ms.author: gwakeford
   ms.date: 01/31/2024
+  ROBOTS: NOINDEX
 
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | whats-new
