--- a/articles/container-apps/TOC.yml
+++ b/articles/container-apps/TOC.yml
@@ -148,18 +148,18 @@
           href: troubleshooting.md
         - name: Errors and failures
           items:
-          - name: Container create failures
+          - name: Container create
             href: troubleshoot-container-create-failures.md
-          - name: Container start failures
-            href: troubleshoot-container-start-failures.md
-          - name: Health probe failures
+          - name: Open Container Initiative (OCI)
+            href: troubleshoot-open-container-initiative-failures.md
+          - name: Health probe
             href: troubleshoot-health-probe-failures.md
           - name: Image pull
             href: troubleshoot-image-pull-failures.md
           - name: Storage mount
             href: troubleshoot-storage-mount-failures.md
           - name: Target port
-            href: troubleshoot-target-port-failures.md
+            href: troubleshoot-target-port-settings.md
     - name: Reliability in Azure Container Apps
       href: ../reliability/reliability-azure-container-apps.md?toc=/azure/container-apps/toc.json&bc=/azure/container-apps/breadcrumb/toc.json
 - name: Observability
