--- a/articles/firewall/firewall-faq.yml
+++ b/articles/firewall/firewall-faq.yml
@@ -156,8 +156,8 @@ sections:
            - The firewall's region [supports availability zones](../reliability/availability-zones-region-support.md).
            - All attached public IP addresses are deployed with availability zones. In the properties page of each public IP address, ensure the **availability zones** field exists and is configured with the same zones you configured for the firewall.
 
-           Reconfiguring availability zones can only be done when you restart the firewall. First you need to deallocate the firewall (by using '$azfw.Deallocate()'), then change the zone configuration and then allocate the firewall (by using  '$azfw.Allocate()'). 
-          After you allocate the firewall, and right before starting the firewall with `Set-AzFirewall`, use the following Azure PowerShell to modify the firewall's **Zones** property.
+           Reconfiguring availability zones can only be done when you restart the firewall. First you need to deallocate the firewall '(by using '$azfw.Deallocate()')', then change the zone configuration and then allocate the firewall (by using  '$azfw.Allocate()'). 
+          After you allocate the firewall, and right before starting the firewall with `Set-AzFirewall`, use the following Azure PowerShell to modify the firewall's **Zones** property':'
 
            ```azurepowershell
            $azfw = Get-AzFirewall -Name "FW Name" -ResourceGroupName "RG Name"
