--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -135,6 +135,8 @@
         href: connect-virtual-machine-through-browser.md
     - name: Start or stop a VM using PowerShell or CLI
       href: use-command-line-start-stop-virtual-machines.md
+    - name: Hibernate a VM
+      href: devtest-lab-hibernate-vm.md
     - name: Restart a VM
       href: devtest-lab-restart-vm.md
     - name: Resize a VM
