--- a/articles/bastion/TOC.yml
+++ b/articles/bastion/TOC.yml
@@ -7,7 +7,7 @@
 - name: Quickstarts
   expanded: true
   items:
-  - name: Deploy Bastion automatically - Basic SKU
+  - name: Deploy Bastion automatically
     href: quickstart-host-portal.md
   - name: Deploy Bastion automatically - Developer SKU
     href: quickstart-developer-sku.md
