--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -23,6 +23,8 @@
         href: network-attached-storage-concept.md 
       - name: Understand NAS protocols
         href: network-attached-storage-protocols.md
+      - name: Understand SMB support 
+        href: sever-message-block-support.md
       - name: Understand NAS permissions 
         items:
         - name: Understand NAS share permissions 
@@ -45,8 +47,6 @@
         href: understand-data-encryption.md
       - name: Understand Kerberos
         href: kerberos.md 
-      - name: Understand DNS 
-        href: domain-name-systems.md
       - name: Understand guidelines for Active Directory Domain Services
         href: understand-guidelines-active-directory-domain-service-site.md
       - name: Understand DNS 
