add feature status overview

--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -302,26 +302,41 @@
           href: ./rest-api-versioning.md
   - name: Client libraries
     items:
-    - name: .NET provider
-      href: /dotnet/api/Microsoft.Extensions.Configuration.AzureAppConfiguration
-    - name: .NET Framework builder
-      href: https://go.microsoft.com/fwlink/?linkid=2074663
-    - name: Java Spring provider
-      href: https://go.microsoft.com/fwlink/?linkid=2180917
-    - name: Python provider
-      href: https://pypi.org/project/azure-appconfiguration-provider/
-    - name: Azure SDK for .NET
-      href: https://go.microsoft.com/fwlink/?linkid=2092056
-    - name: Azure SDK for Java
-      href: https://go.microsoft.com/fwlink/?linkid=2098196
-    - name: Azure SDK for Python
-      href: https://go.microsoft.com/fwlink/?linkid=2103727
-    - name: Azure SDK for JavaScript
-      href: https://go.microsoft.com/fwlink/?linkid=2103664
-    - name: Azure SDK for Go
-      href: https://go.microsoft.com/fwlink/?linkid=2270866
+    - name: Overview
+      href: configuration-provider-overview.md
+    - name: .NET
+      items:
+      - name: API reference
+        href: /dotnet/api/Microsoft.Extensions.Configuration.AzureAppConfiguration
+      - name: Azure SDK for .NET
+        href: https://go.microsoft.com/fwlink/?linkid=2092056
+      - name: .NET Framework builder
+        href: https://go.microsoft.com/fwlink/?linkid=2074663
+    - name: Java Spring
+      items:
+      - name: Feature reference
+        href: https://go.microsoft.com/fwlink/?linkid=2180917
+      - name: Azure SDK for Java
+        href: https://go.microsoft.com/fwlink/?linkid=2098196
+    - name: Python
+      items:
+      - name: Feature reference
+        href: https://pypi.org/project/azure-appconfiguration-provider/
+      - name: Azure SDK for Python
+        href: https://go.microsoft.com/fwlink/?linkid=2103727
+    - name: JavaScript
+      items:
+      - name: Azure SDK for JavaScript
+        href: https://go.microsoft.com/fwlink/?linkid=2103664
+    - name: Go
+      items:
+      - name: Azure SDK for Go
+        href: https://go.microsoft.com/fwlink/?linkid=2270866
+
   - name: Feature management
     items:
+    - name: Overview
+      href: configuration-provider-overview.md
     - name: .NET
       items:
       - name: Feature reference
