--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -6,8 +6,6 @@
     href: site-recovery-overview.md
   - name: Site Recovery - FAQ
     href: site-recovery-faq.yml
-  - name: Site Recovery - costs
-    href: site-recovery-cost.md
 - name: What's New
   items:
   - name: Release notes
@@ -163,6 +161,8 @@
       href: azure-to-azure-architecture.md
     - name: Azure trusted launch VMs
       href: concepts-trusted-vm.md
+    - name: Azure to Azure - Costs
+      href: site-recovery-cost.md
     - name: Configure Failover for Multiple IP addresses
       href: concepts-multiple-ip-address-failover.md
     - name: Configure Mobility Service Proxy Settings
