--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -468,7 +468,7 @@
     - name: Pricing
       href: https://azure.microsoft.com/pricing/details/app-service/
     - name: Quota Information
-      href: ../azure-resource-manager/management/azure-subscription-service-limits.md#app-service-limits
+      href: ../azure-resource-manager/management/azure-subscription-service-limits.md#azure-app-service-limits
     - name: Service Updates
       href: https://azure.microsoft.com/updates/?product=app-service
     - name: Routine maintenance
