--- a/articles/index.yml
+++ b/articles/index.yml
@@ -924,7 +924,7 @@ productDirectory:
         - iot
       url: iot-hub/index.yml
     # Card
-    - title: Azure IoT Operations (Preview)
+    - title: Azure IoT Operations
       summary: Unlock insights for intelligent local actions and global visibility
       imageSrc: ./media/index/iot-operations.svg
       azureCategories:
