files not referencing corretly even though links correct

--- a/articles/healthcare-apis/index.yml
+++ b/articles/healthcare-apis/index.yml
@@ -20,7 +20,7 @@ highlightedContent:
          url: ./healthcare-apis-overview.md
        - title: Release notes
          itemType: whats-new
-         url: ./release-notes-2025.md          
+         url: release-notes-2025.md
        - title: Get an access token
          itemType: how-to-guide
          url: ./get-access-token.md
