--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -251,7 +251,7 @@
     href: smb-performance.md
   - name: NFS performance
     href: nfs-performance.md
-  - name: NFS large directory best practices
+  - name: Large directory best practices
     href: nfs-large-directories.md
   - name: Scalability and performance targets
     href: storage-files-scale-targets.md
