--- a/articles/healthcare-apis/azure-api-for-fhir/toc.yml
+++ b/articles/healthcare-apis/azure-api-for-fhir/toc.yml
@@ -166,7 +166,7 @@
   - name: GitHub Projects
     href: fhir-github-projects.md
   - name: Release notes
-    href: release-notes.md 
+    href: release-notes-2025.md
   - name: Supported features
     href: fhir-features-supported.md 
 - name: Reference
