update name to upload API

--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -780,7 +780,7 @@
     href: threat-intelligence-integration.md
   - name: Enable MDTI data connector
     href: connect-mdti-data-connector.md
-  - name: Connect threat intelligence STIX objects API
+  - name: Connect threat intelligence with upload API
     href: connect-threat-intelligence-upload-api.md
   - name: Connect threat intelligence platforms
     href: connect-threat-intelligence-tip.md
@@ -1253,7 +1253,7 @@
       href: hunting-with-rest-api.md
     - name: Enrich entities with geolocation data with REST-API
       href: geolocation-data-api.md
-    - name: STIX objects API reference
+    - name: Threat intelligence upload API reference
       href: stix-objects-api.md
     - name: Legacy upload indicator API reference
       href: upload-indicators-api.md
