--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -232,8 +232,6 @@
       items:
       - name: HTTP/2
         href: front-door-http2.md
-    - name: Monitor Front Door
-      href: monitor-front-door.md    
     - name: FAQ
       href: front-door-faq.yml
   - name: CDN
@@ -380,6 +378,12 @@
         href: ../web-application-firewall/afds/waf-front-door-rate-limit-configure.md?toc=%2fazure%2ffrontdoor%2ftoc.json
       - name: Configure IP restriction
         href: ../web-application-firewall/afds/waf-front-door-configure-ip-restriction.md?toc=/azure/frontdoor/toc.json
+    - name: Monitor
+      items:
+      - name: Monitor Front Door
+        href: monitor-front-door.md    
+      - name: Front Door monitoring data reference
+        href: monitor-front-door-reference.md 
     - name: Troubleshoot
       items:
       - name: Troubleshooting with RefString
@@ -612,8 +616,6 @@
     items:
     - name: HTTP headers protocol support
       href: front-door-http-headers-protocol.md
-    - name: Front Door monitoring data reference
-      href: monitor-front-door-reference.md  
     - name: Azure Front Door POP locations
       items:
       - name: POP locations by region
