--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -1,9 +1,12 @@
 ### YamlMime:Landing
 
 title: App Service documentation
-summary: Azure App Service enables you to build and host web apps, mobile back ends, and RESTful APIs in the programming language of your choice without managing 
-         infrastructure. Languages supported include .NET, Java, Node.js, Python, and PHP. It offers auto-scaling and high availability, supports both Windows and Linux, 
-         and enables automated deployments from GitHub, Azure DevOps, or any Git repo. Learn how to use Azure App Service with our quickstarts, tutorials, and samples.
+summary: Azure App Service enables you to build and host web apps, mobile back ends, and RESTful APIs in the 
+         language stack of your choice without managing infrastructure, including .NET, Java 
+         (Java SE, Tomcat, and JBoss EAP), Node.js, Python, and PHP. It can also run any language stack with 
+         custom containers. I provides auto-scaling and high availability, supports both Windows and Linux, and 
+         enables automated deployments from GitHub, Azure DevOps, or any Git repo. Learn how to use Azure App 
+         Service with our quickstarts, tutorials, and samples. 
 
 metadata:
   title: Azure App Service documentation
