UUF December Fixes (#424)
* Freshness Review Pass
" to indicate that they are markdown.

If you have any specific details or requirements related to your pull request, please provide them and I can assist you further.

* Updated the ms.date for freshness review pass

* Add files via upload

* Delete cycle_docs_v1/how-to/slurm-cloud-bursting-setup-on-azure.md.md

* Update toc.yml

* Updated ms.date

--- a/articles/cyclecloud/toc.yml
+++ b/articles/cyclecloud/toc.yml
@@ -82,7 +82,7 @@
       href: ./how-to/slurm-cloud-bursting-setup.md
   - name: CycleCloud Workspace for Slurm
     items:
-    - name: Plan you CycleCloud Workspace for Slurm Deployment
+    - name: Plan your CycleCloud Workspace for Slurm Deployment
       href: ./how-to/ccws/plan-your-deployment.md
     - name: How to deploy using the CLI
       href: ./how-to/ccws/deploy-with-cli.md
@@ -214,6 +214,8 @@
       href: gridengine.md
     - name: Slurm
       href: slurm.md
+    - name: Slurm 3.0 Scheduler Integration
+      href: slurm-3.md
     - name: HT Condor
       href: htcondor.md
     - name: IBM Spectrum LSF
