--- a/articles/container-apps/TOC.yml
+++ b/articles/container-apps/TOC.yml
@@ -120,23 +120,25 @@
     - name: Use dynamic sessions
       items:
         - name: Code interpreter sessions
-          href: sessions-code-interpreter.md
-        - name: Tutorials
           items:
-          - name: Use a LLM agent
+          - name: Overview
+            href: sessions-code-interpreter.md
+          - name: Tutorials
             items:
-            - name: AutoGen
-              href: sessions-tutorial-autogen.md
-            - name: LangChain
-              href: sessions-tutorial-langchain.md
-            - name: LlamaIndex
-              href: sessions-tutorial-llamaindex.md
-            - name: Semantic Kernel
-              href: sessions-tutorial-semantic-kernel.md
-          - name: Use the REST API
-            items:
-            - name: JavaScript Code interpreter (preview)
-              href: sessions-tutorial-nodejs.md
+            - name: Use a LLM agent
+              items:
+              - name: AutoGen
+                href: sessions-tutorial-autogen.md
+              - name: LangChain
+                href: sessions-tutorial-langchain.md
+              - name: LlamaIndex
+                href: sessions-tutorial-llamaindex.md
+              - name: Semantic Kernel
+                href: sessions-tutorial-semantic-kernel.md
+            - name: Use the REST API
+              items:
+              - name: JavaScript Code interpreter (preview)
+                href: sessions-tutorial-nodejs.md
         - name: Custom container sessions
           href: sessions-custom-container.md
     - name: Event-driven processing
